--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,6 @@ set(CMAKE_TOOLCHAIN_FILE "${VCPKG_CMAKE_FILE}" CACHE STRING "Vcpkg toolchain fil
 project(MineCord VERSION 1.0 DESCRIPTION "Discord Minecraft Server Mananger")
     
 # list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
-    
 # Create an executable
 add_executable(${PROJECT_NAME}
     src/main.cpp
@@ -16,13 +15,9 @@ add_executable(${PROJECT_NAME}
 
 find_package(OpenSSL REQUIRED)
 find_package(dpp CONFIG REQUIRED)
-    
-target_link_libraries(${PROJECT_NAME} 
-    ${DPP_LIBRARIES}
-)
-    
+target_link_libraries(${PROJECT_NAME} PRIVATE dpp::dpp)
+
 target_include_directories(${PROJECT_NAME} PRIVATE
-    ${DPP_INCLUDE_DIR}
     src/DiscordBot
 )
     
