Fix building on linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,8 @@
 #
 cmake_minimum_required (VERSION 3.25)
 
+set(VCPKG_CMAKE_FILE $ENV{VCPKG_CMAKE_FILE})
+include(${VCPKG_CMAKE_FILE})
 set(CMAKE_TOOLCHAIN_FILE "${VCPKG_CMAKE_FILE}" CACHE STRING "Vcpkg toolchain file")
 
 # Enable Hot Reload for MSVC compilers if supported.
@@ -11,18 +13,19 @@ if (POLICY CMP0141)
   set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
 endif()
 
-project ("Discord-Minecraft")
-
 # Project name, version and description
-project(MineCord VERSION 1.0 DESCRIPTION "Discord Minecraft Server Mananger")
-    
-find_package(bsoncxx CONFIG REQUIRED)
-find_package(mongocxx CONFIG REQUIRED)
+project(Scorch VERSION 1.0 DESCRIPTION "Discord Game Server Manager")
 
 find_package(OpenSSL REQUIRED)
 find_package(dpp CONFIG REQUIRED)
 
-# list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+find_package(mongocxx CONFIG REQUIRED)
+find_package(bsoncxx CONFIG REQUIRED)
+
+find_package(Opus CONFIG REQUIRED)
+
+find_package(unofficial-sodium CONFIG REQUIRED)
+
 # Create an executable
 add_executable(${PROJECT_NAME}
     src/main.cpp
@@ -34,10 +37,16 @@ add_executable(${PROJECT_NAME}
 	src/Log.cpp
 )
 
+set_target_properties(${PROJECT_NAME} PROPERTIES
+    CXX_STANDARD 20
+    CXX_STANDARD_REQUIRED ON
+)
+
 target_link_libraries(${PROJECT_NAME} PRIVATE $<IF:$<TARGET_EXISTS:mongo::bsoncxx_static>,mongo::bsoncxx_static,mongo::bsoncxx_shared>)
 target_link_libraries(${PROJECT_NAME} PRIVATE $<IF:$<TARGET_EXISTS:mongo::mongocxx_static>,mongo::mongocxx_static,mongo::mongocxx_shared>)
-
+target_link_libraries(${PROJECT_NAME} PRIVATE Opus::opus)
 target_link_libraries(${PROJECT_NAME} PRIVATE dpp::dpp)
+target_link_libraries(${PROJECT_NAME} PRIVATE unofficial-sodium::sodium)
 
 if(NOT TARGET spdlog)
     # Stand-alone build
@@ -51,9 +60,4 @@ target_include_directories(${PROJECT_NAME} PRIVATE
     src/Components
     src/DiscordBot
 	src/Database
-)
-    
-set_target_properties(${PROJECT_NAME} PROPERTIES
-    CXX_STANDARD 20
-    CXX_STANDARD_REQUIRED ON
 )
